adding post method to backend server, and set the proxy that targeted the /api endpoint, with localhost hosting

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1817,6 +1817,10 @@ input:checked + .toggle-bg {
   gap: 1rem;
 }
 
+.gap-10 {
+  gap: 2.5rem;
+}
+
 .-space-x-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(-1rem * var(--tw-space-x-reverse));
